# focus-app

./: .gitignore  README.md
backend/: Cargo.toml  database.sqlite
backend/migrations/2025-12-10-202358-0000_create_users/: up.sql
backend/src/: auth.rs  main.rs  models.rs  schema.rs
design notes/: design and todo.md
frontend/: package-lock.json  package.json
frontend/src/: api.js  main.js
frontend/src/components/: Dashboard.vue  Login.vue  Register.vue
frontend/src/router/: index.js
