[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.4", features = ["sqlite", "r2d2", "chrono"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
